--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-
+     permissions:
+     actions: read
+     contents: read
+     security-events: write
     steps:
       - uses: actions/checkout@v4
 
@@ -26,6 +29,17 @@ jobs:
           source venv/bin/activate
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+        
+      - name: Analyze with CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: python
+          
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+         category: "/language:${{matrix.language}}"
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
