--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,8 @@
 name: Build and deploy Python app to Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: 'oam-devsecops'   # set this to your application's name
-  PYTHON_VERSION: '3.9'               
+  AZURE_WEBAPP_NAME: 'pae-devsecops'   # set this to your application's name
+  PYTHON_VERSION: '3.12'               
 on:
   push:
     branches:
